<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_back" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E4E7E7"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/image_icon"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/image_icon"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_icon"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/image_icon"
            android:textColor="#595959"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about_info"
                android:textColor="#272C49"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/blog_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ian" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:text="@string/blog"
                android:textColor="#0D1B48"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
